--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -2,14 +2,14 @@ main:
   - name: "Home"
     link: "/"
   - name: "Getting Started"
-    link: "/getting-started/"
+    link: "docs/getting-started/"
   - name: "Installation"
-    link: "/installation/"
+    link: "docs/installation/"
   - name: "Usage"
-    link: "/usage/"
+    link: "docs/usage/"
   - name: "Templates"
-    link: "/templates/"
+    link: "docs/templates/"
   - name: "Commands"
-    link: "/commands/"
+    link: "docs/commands/"
   - name: "FAQs"
-    link: "/faqs/"
+    link: "docs/faqs/"
