--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,15 +1,14 @@
-main:
-  - name: "Home"
-    link: "/"
-  - name: "Getting Started"
-    link: "docs/getting-started/"
-  - name: "Installation"
-    link: "docs/installation/"
-  - name: "Usage"
-    link: "docs/usage/"
-  - name: "Templates"
-    link: "docs/templates/"
-  - name: "Commands"
-    link: "docs/commands/"
-  - name: "FAQs"
-    link: "docs/faqs/"
+- title: "Home"
+  url: "/"
+- title: "Getting Started"
+  url: "/getting-started/"
+- title: "Installation"
+  url: "/installation/"
+- title: "Usage"
+  url: "/usage/"
+- title: "Templates"
+  url: "/templates/"
+- title: "Commands"
+  url: "/commands/"
+- title: "FAQs"
+  url: "/faqs/"
