--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,14 +1,15 @@
-- title: "Home"
-  url: "/"
-- title: "Getting Started"
-  url: "/getting-started/"
-- title: "Installation"
-  url: "/installation/"
-- title: "Usage"
-  url: "/usage/"
-- title: "Templates"
-  url: "/templates/"
-- title: "Commands"
-  url: "/commands/"
-- title: "FAQs"
-  url: "/faqs/"
+main:
+  - title: "Home"
+    url: ""
+  - title: "Getting Started"
+    url: "getting-started/"
+  - title: "Installation"
+    url: "installation/"
+  - title: "Usage"
+    url: "usage/"
+  - title: "Templates"
+    url: "templates/"
+  - title: "Commands"
+    url: "commands/"
+  - title: "FAQs"
+    url: "faqs/"
