--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,15 +1,14 @@
-main:
-  - title: "Home"
-    url: ""
-  - title: "Getting Started"
-    url: "getting-started/"
-  - title: "Installation"
-    url: "installation/"
-  - title: "Usage"
-    url: "usage/"
-  - title: "Templates"
-    url: "templates/"
-  - title: "Commands"
-    url: "commands/"
-  - title: "FAQs"
-    url: "faqs/"
+- title: "Home"
+  url: "/KvDeveloper.docs/"
+- title: "Getting Started"
+  url: "/KvDeveloper.docs/getting-started"
+- title: "Installation"
+  url: "/KvDeveloper.docs/installation"
+- title: "Usage"
+  url: "/KvDeveloper.docs/usage"
+- title: "Templates"
+  url: "/KvDeveloper.docs/templates"
+- title: "Commands"
+  url: "/KvDeveloper.docs/commands"
+- title: "FAQs"
+  url: "/KvDeveloper.docs/faqs"
